syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.maihe.proto.InputData";
option java_outer_classname = "Excel";
option objc_class_prefix = "MH";

package InputDataPackage;

service InputDataService {
 //批量导入数据接口
  rpc inputData (inputDataMessage) returns (inputDataResponse) {
  }

}

message inputDataMessage{
  string inputDataSql=1;
}

message inputDataResponse{
  string result =1;
}







